--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -283,8 +283,8 @@ img, iframe {
 
 .map-responsive {
   position: relative;
-  padding-bottom: 40%; /* Eskiden 56.25% idi, şimdi daha kısa */
-  height: 0;
+  width: 100%;
+  padding-top: 56.25%; /* 16:9 oran */
   overflow: hidden;
   border-radius: 10px;
 }
@@ -296,7 +296,9 @@ img, iframe {
   width: 100%;
   height: 100%;
   border: 0;
+  display: block;
 }
+
 
 
 
