--- a/contactus/templates/en/contactus.html
+++ b/contactus/templates/en/contactus.html
@@ -67,16 +67,12 @@
         </div>
 
         <section class="location-section py-5 bg-dark text-white">
-        <div class="container text-center" data-aos="fade-up">
-            <h3 class="mb-4">📍 Find Us on Google Maps</h3>
-            <div class="map-responsive mt-4">
-            <iframe src="https://www.google.com/maps/embed?pb=..." 
-                width="100%" height="450" style="border:0;" 
-                allowfullscreen="" loading="lazy" 
-                referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
+            <div class="container text-center" data-aos="fade-up">
+                <h3 class="mb-4">📍 Find Us on Google Maps</h3>
+                <div class="map-responsive mt-4">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9369.393506782144!2d-16.580356457949932!3d28.402442226798154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xc6a7fd061683509%3A0x74c8f925f2dd9bce!2sParque%20Canino%20Los%20Realejos!5e0!3m2!1str!2ses!4v1751474555548!5m2!1str!2ses" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </div>
-        </div>
         </section>
     </div>    
 </div>
