Umarim sondur insALLAH olur

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,16 +16,11 @@ img, iframe {
 
 /* style.css dosyana ekle */
 .navbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
-  backdrop-filter: blur(10px);
+  background-color: rgba(0, 0, 0, 0.4); /* siyah ve şeffaf */
+  backdrop-filter: blur(10px); /* blur efekti */
   transition: top 0.3s;
   z-index: 9999;
 }
-
 
 .navbar .nav-link {
   font-weight: 600; /* Daha kalın: 400 normal, 600 yarı kalın, 700 kalın */
@@ -42,7 +37,6 @@ img, iframe {
 .navbar .nav-link:hover i {
   transform: scale(1.2);
 }
-
 
 
 
