--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,7 +17,7 @@
 <body>
 
 <div class="page-wrapper d-flex flex-column min-vh-100">
-  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark py-3 shadow-sm">
+  <nav id="navbar" class="navbar navbar-expand-lg navbar-dark fixed-top py-3 shadow-sm">
     <div class="container d-flex justify-content-between align-items-center">
 
       <a href="/en" class="navbar-brand me-4">
@@ -216,26 +216,6 @@
     prevScrollPos = currentScrollPos;
   });
 </script>
-let prevScrollPos = window.pageYOffset;
-const navbar = document.getElementById("navbar");
-
-window.addEventListener("scroll", function () {
-  const currentScrollPos = window.pageYOffset;
-
-  if (currentScrollPos === 0) {
-    navbar.style.top = "0";
-    console.log("EN ÜSTE GELDİK – Navbar görünür");
-  } else if (prevScrollPos > currentScrollPos) {
-    navbar.style.top = "0";
-    console.log("Yukarı scroll – Navbar görünür");
-  } else {
-    navbar.style.top = "-100px";
-    console.log("Aşağı scroll – Navbar gizlendi");
-  }
-
-  prevScrollPos = currentScrollPos;
-});
-
 
 
 
