--- a/templates/spalayout.html
+++ b/templates/spalayout.html
@@ -201,28 +201,30 @@
 </script>
 <script>
   const navbar = document.getElementById("navbar");
+  let lastScrollY = window.pageYOffset;
 
-  function isDesktop() {
-    return window.innerWidth > 991;
-  }
+  window.addEventListener("scroll", function () {
+    const currentScrollY = window.pageYOffset;
 
-  if (isDesktop()) {
-    let prevScrollPos = window.pageYOffset;
+    // Eğer en üstteysek, navbarı göster ve sabit tut
+    if (currentScrollY <= 0) {
+      navbar.style.top = "0";
+      return;
+    }
 
-    window.addEventListener("scroll", function () {
-      const currentScrollPos = window.pageYOffset;
-      if (prevScrollPos > currentScrollPos) {
-        navbar.style.top = "0";
-      } else {
-        navbar.style.top = "-100px";
-      }
-      prevScrollPos = currentScrollPos;
-    });
-  } else {
-    // 👇 Mobilde her durumda navbar görünür olsun
-    navbar.style.top = "0";
-  }
+    // Yukarı scroll
+    if (currentScrollY < lastScrollY) {
+      navbar.style.top = "0";
+    } 
+    // Aşağı scroll
+    else {
+      navbar.style.top = "-100px";
+    }
+
+    lastScrollY = currentScrollY;
+  });
 </script>
+
 
 
 </body>
