Navbar es eklendı

--- a/aboutus/templates/en/index.html
+++ b/aboutus/templates/en/index.html
@@ -198,7 +198,7 @@
           <li>Visit our location in Tenerife and fill out a membership form.</li>
           <li>Start enjoying the Aurora420 experience!</li>
         </ol>
-        <a href="/contact-us" class="btn btn-success mt-3">Get in Touch</a>
+        <a href="/en/contact-us" class="btn btn-success mt-3">Get in Touch</a>
       </div>
     </div>
   </div>
